fix note list section mobile view

--- a/main/static/scss/notelist.scss
+++ b/main/static/scss/notelist.scss
@@ -5,8 +5,20 @@ body {
 
   #content {
 
+    @media screen and (max-width: 980px) {
+      margin-left: 2rem;
+      margin-right: 2rem;
+      margin-top: 4rem;
+    }
+
     h1 {
       margin-top: -1.5rem;
+
+      @media screen and (max-width: 575px) {
+        font-size: 3rem;
+        margin-top: initial;
+      }
+
       i {
         font-size: 0.6em;
       }
