--- a/main/static/scss/notelistsection.scss
+++ b/main/static/scss/notelistsection.scss
@@ -42,11 +42,7 @@ body {
       flex-basis: 32%;
 
       @media screen and (max-width: 1300px) {
-        flex-basis: 31%;
-      }
-
-      @media screen and (max-width: 980px) {
-        flex-basis: 49%;
+        flex-basis: 47%;
       }
 
       @media screen and (max-width: 830px) {
